feat: check admin
